# CSEM-MIDL

./: README.md  pyproject.toml
midl/: __init__.py  _cache.py  _loader.py  _savers.py  _time.py
tests/: test_cache.py  test_loader.py  test_savers.py  test_smoke.py  test_time.py
tests/data/: 202403_32Re.csv  202403_L1.csv
tests/data/reference/: MIDL_14Re_2005-01-01T0000_to_2005-01-02T0000.csv  MIDL_14Re_2005-01-01T1000_to_2005-02-03T1300.csv  MIDL_32Re_2005-01-01T0000_to_2005-01-02T0000.csv  MIDL_32Re_2005-01-01T1000_to_2005-02-03T1300.csv  MIDL_L1_2005-01-01T0000_to_2005-01-02T0000.csv
